--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
 
         <!-- Frequently Ask Question  -->
 
-        <div class="w-full bg-gray-900 mx-auto py-8">
+        <div class="w-full bg-gray-900 mx-auto p-8">
             <h1
                 class="text-2xl md:text-2xl lg:text-5xl text-center text-yellow-600">Frequently
                 Question </h1>
