--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                             Reason to why One </h3>
 
                         <p
-                            class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">Get
+                            class="mb-4 text-base font-normal text-white dark:text-gray-400">Get
                             access to over 20+ module including a dashboard
                             layout and premium techonologies, </p>
 
@@ -201,7 +201,7 @@
                             Reason to why two </h3>
 
                         <p
-                            class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">Get
+                            class="mb-4 text-base font-normal text-white dark:text-gray-400">Get
                             access to over 20+ module including a dashboard
                             layout and premium techonologies, </p>
 
@@ -217,7 +217,7 @@
                             Reason to why three </h3>
 
                         <p
-                            class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">Get
+                            class="mb-4 text-base font-normal text-white dark:text-gray-400">Get
                             access to over 20+ module including a dashboard
                             layout and premium techonologies, </p>
 
@@ -233,7 +233,7 @@
                             Reason to why four </h3>
 
                         <p
-                            class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">Get
+                            class="mb-4 text-base font-normal text-white dark:text-gray-400">Get
                             access to over 20+ module including a dashboard
                             layout and premium techonologies, </p>
 
@@ -431,7 +431,7 @@
                 class="w-full max-w-7xl mx-auto">
                 <h2 id="accordion-flush-heading-1">
                     <button type="button"
-                        class="flex items-center justify-between w-full py-5 font-medium rtl:text-right text-gray-500 border-b border-gray-200 dark:border-gray-700 dark:text-gray-400 gap-3"
+                        class="flex items-center justify-between w-full py-5 font-medium rtl:text-right text-white border-b border-gray-200 dark:border-gray-700 dark:text-gray-400 gap-3"
                         data-accordion-target="#accordion-flush-body-1"
                         aria-expanded="true"
                         aria-controls="accordion-flush-body-1">
@@ -452,13 +452,13 @@
                     <div
                         class="py-5 border-b border-gray-200 dark:border-gray-700">
                         <p
-                            class="mb-2 text-gray-500 dark:text-gray-400">Gmit
+                            class="mb-2 text-white dark:text-gray-400">Gmit
                             is
                             an open-source library of interactive components
                             built
                             on top of Tailwind CSS including buttons, dropdowns,
                             modals, navbars, and more.</p>
-                        <p class="text-gray-500 dark:text-gray-400">Check out
+                        <p class= text-white dark:text-gray-400">Check out
                             this
                             guide to learn how to <a
                                 href="/docs/getting-started/introduction/"
@@ -469,7 +469,7 @@
                 </div>
                 <h2 id="accordion-flush-heading-2">
                     <button type="button"
-                        class="flex items-center justify-between w-full py-5 font-medium rtl:text-right text-gray-500 border-b border-gray-200 dark:border-gray-700 dark:text-gray-400 gap-3"
+                        class="flex items-center justify-between w-full py-5 font-medium rtl:text-right text-white border-b border-gray-200 dark:border-gray-700 dark:text-gray-400 gap-3"
                         data-accordion-target="#accordion-flush-body-2"
                         aria-expanded="false"
                         aria-controls="accordion-flush-body-2">
@@ -490,12 +490,12 @@
                     <div
                         class="py-5 border-b border-gray-200 dark:border-gray-700">
                         <p
-                            class="mb-2 text-gray-500 dark:text-gray-400">Frontend
+                            class="mb-2 text-white dark:text-gray-400">Frontend
                             Development
                             Lorem ipsum dolor sit amet consectetur adipisicing
                             elit. Aut placeat optio sit facilis ipsum.
                             Recusandae consequuntur ipsam quae enim eos.</p>
-                        <p class="text-gray-500 dark:text-gray-400">Check out
+                        <p class= text-white dark:text-gray-400">Check out
                             the <a
                                 href="https://flowbite.com/figma/"
                                 class="text-blue-600 dark:text-blue-500 hover:underline">
@@ -506,7 +506,7 @@
                     </div>
                     <h2 id="accordion-flush-heading-3">
                         <button type="button"
-                            class="flex items-center justify-between w-full py-5 font-medium rtl:text-right text-gray-500 border-b border-gray-200 dark:border-gray-700 dark:text-gray-400 gap-3"
+                            class="flex items-center justify-between w-full py-5 font-medium rtl:text-right text-white border-b border-gray-200 dark:border-gray-700 dark:text-gray-400 gap-3"
                             data-accordion-target="#accordion-flush-body-3"
                             aria-expanded="false"
                             aria-controls="accordion-flush-body-3">
@@ -529,7 +529,7 @@
                         aria-labelledby="accordion-flush-heading-3">
                         <div
                             class="py-5 border-b border-gray-200 dark:border-gray-700">
-                            <p class="mb-2 text-gray-500 dark:text-gray-400">The
+                            <p class="mb-2 text-white dark:text-gray-400">The
                                 main
                                 difference is that the core components from
                                 Flowbite
@@ -543,7 +543,7 @@
                                 whereas
                                 Tailwind UI offers sections of pages.</p>
                             <p
-                                class="mb-2 text-gray-500 dark:text-gray-400">However,
+                                class="mb-2 text-white dark:text-gray-400">However,
                                 we
                                 actually recommend using both Flowbite, Flowbite
                                 Pro,
@@ -552,11 +552,11 @@
                                 stopping you from using the best of two
                                 worlds.</p>
                             <p
-                                class="mb-2 text-gray-500 dark:text-gray-400">Learn
+                                class="mb-2 text-white dark:text-gray-400">Learn
                                 more
                                 about these technologies:</p>
                             <ul
-                                class="ps-5 text-gray-500 list-disc dark:text-gray-400">
+                                class="ps-5 text-white list-disc dark:text-gray-400">
                                 <li><a href="#"
                                         class="text-blue-600 dark:text-blue-500 hover:underline">Flowbite
                                         Pro</a></li>
@@ -577,14 +577,14 @@
                     <div
                         class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
                         <span
-                            class="text-sm text-gray-500 sm:text-center dark:text-gray-400">©
+                            class="text-sm text-white sm:text-center dark:text-gray-400">©
                             2023 <a href="https://flowbite.com/"
                                 class="hover:underline">Flowbite™</a>. All
                             Rights
                             Reserved.
                         </span>
                         <ul
-                            class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
+                            class="flex flex-wrap items-center mt-3 text-sm font-medium text-white dark:text-gray-400 sm:mt-0">
                             <li>
                                 <a href="#"
                                     class="hover:underline me-4 md:me-6">About</a>
