--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
                             built
                             on top of Tailwind CSS including buttons, dropdowns,
                             modals, navbars, and more.</p>
-                        <p class= text-white dark:text-gray-400">Check out
+                        <p class=text-white dark:text-gray-400">Check out
                             this
                             guide to learn how to <a
                                 href="/docs/getting-started/introduction/"
@@ -495,7 +495,7 @@
                             Lorem ipsum dolor sit amet consectetur adipisicing
                             elit. Aut placeat optio sit facilis ipsum.
                             Recusandae consequuntur ipsam quae enim eos.</p>
-                        <p class= text-white dark:text-gray-400">Check out
+                        <p class=text-white dark:text-gray-400">Check out
                             the <a
                                 href="https://flowbite.com/figma/"
                                 class="text-blue-600 dark:text-blue-500 hover:underline">
@@ -570,20 +570,20 @@
                 </div>
             </div>
 
-            <div class="w-full bg-gray-900">
+            <div class="w-full bg-gray-800">
 
                 <footer
-                    class="w-full max-w-7xl mx-auto  pt-8 dark:bg-gray-800">
+                    class="w-full max-w-7xl mx-auto  py-4 ">
                     <div
-                        class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
+                        class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-center">
                         <span
                             class="text-sm text-white sm:text-center dark:text-gray-400">©
                             2023 <a href="https://flowbite.com/"
-                                class="hover:underline">Flowbite™</a>. All
+                                class="hover:underline">GM IT LIMITED</a>. All
                             Rights
                             Reserved.
                         </span>
-                        <ul
+                        <!-- <ul
                             class="flex flex-wrap items-center mt-3 text-sm font-medium text-white dark:text-gray-400 sm:mt-0">
                             <li>
                                 <a href="#"
@@ -601,7 +601,7 @@
                             <li>
                                 <a href="#" class="hover:underline">Contact</a>
                             </li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </footer>
 
