--- a/index.html
+++ b/index.html
@@ -18,42 +18,48 @@
     <body class="bg-gray-100">
         <!-- Navbar -->
         <div
-            class=" bg-gray-800 overflow-hidden">
-            <nav
-                class="bg-transparent text-white w-full max-w-7xl mx-auto border-b border-gray-200 shadow">
-                <div
-                    class="mx-auto px-4 sm:px-6 flex justify-between items-center py-4">
+            class=" bg-gray-800 overflow-hidden ">
+            <div
+                class="mx-auto px-4 sm:px-6 bg-white flex justify-center items-center py-4 border-b border-gray-200 items-center">
+                <nav
+                    class="bg-none text-white flex justify-between w-full max-w-7xl mx-auto items-center ">
+
                     <a href="#"
-                        class="text-2xl font-bold text-white">GMIT</a>
+                        class="text-2xl font-bold text-white">
+                        <img src="./Assets/GMIT LOGO1.png"
+                            class=" h-10 w-20 object-fit" />
+                    </a>
 
                     <!-- Desktop Menu -->
                     <ul class="flex space-x-6 hidden md:flex">
                         <li><a href="#about"
-                                class="text-yellow-500 hover:text-white">Home</a></li>
+                                class="text-yellow-700 hover:text-black">Home</a></li>
                         <li><a href="#courses"
-                                class="text-yellow-500 hover:text-white">About
+                                class="text-yellow-700 hover:text-black">About
                                 Courses</a></li>
                         <li><a href="#student-review"
-                                class="text-yellow-500 hover:text-white">Student
+                                class="text-yellow-700 hover:text-black">Student
                                 Review</a></li>
                         <li><a href="#what-will-get"
-                                class="text-yellow-500 hover:text-white">What
+                                class="text-yellow-700 hover:text-black">What
                                 Will You Get</a></li>
                         <li><a href="#what-will-learn"
-                                class="text-yellow-500 hover:text-white">What
+                                class="text-yellow-700 hover:text-black">What
                                 Will You Learn</a></li>
                     </ul>
 
                     <!-- Mobile Menu and Enroll Button -->
                     <div class="flex flex-row gap-2">
                         <button
-                            class=" bg-yellow-700 text-white hover:text-white px-3 py-2 rounded text-white shadow">Enroll
-                            Now</button>
+                            class=" bg-yellow-700 text-white hover:text-white px-3 py-2 rounded text-white shadow">
+                            <a
+                                href="https://gmit.academy/course/entrepreneur-internship">Enroll
+                                Now</a></button>
 
                         <!-- Drawer Toggle Button -->
                         <div class="text-center block md:hidden">
                             <button
-                                class="text-white font-medium rounded-lg text-sm px-5 py-2.5 mb-2"
+                                class="text-yellow-700 font-medium rounded-lg text-sm px-5 py-2.5 mb-2"
                                 type="button"
                                 data-drawer-target="drawer-example"
                                 data-drawer-show="drawer-example"
@@ -104,8 +110,8 @@
                                     Will You Learn</a></li>
                         </ul>
                     </div>
-                </div>
-            </nav>
+
+                </nav></div>
 
             <!-- Hero Section -->
             <section
@@ -138,7 +144,8 @@
                         Preparation
                         & Special Guidance For Freelancing In Just One
                         Course.</p>
-                    <a href="#courses"
+                    <a
+                        href="https://gmit.academy/course/entrepreneur-internship"
                         class="mt-6 inline-block bg-yellow-700 text-white shadow hover:text-black px-8 py-4 font-semibold rounded-lg shadow hover:bg-gray-100">Enroll
                         Now</a>
                 </div>
@@ -248,7 +255,7 @@
 
             </div>
             <div class="text-center">
-                <a href="#courses"
+                <a href="https://gmit.academy/course/entrepreneur-internship"
                     class="mt-6 text-center inline-block bg-yellow-700 text-white shadow hover:text-black px-8 py-4 font-semibold rounded-lg shadow hover:bg-gray-100">Enroll
                     Now</a>
             </div>
@@ -341,7 +348,7 @@
 
             </div>
             <div class="text-center">
-                <a href="#courses"
+                <a href="https://gmit.academy/course/entrepreneur-internship"
                     class="mt-6 text-center inline-block bg-yellow-700 text-white shadow hover:text-black px-8 py-4 font-semibold rounded-lg shadow hover:bg-gray-100">Enroll
                     Now</a>
             </div>
@@ -413,7 +420,7 @@
                 </div>
             </div>
             <div class="text-center">
-                <a href="#courses"
+                <a href="https://gmit.academy/course/entrepreneur-internship"
                     class="mt-6 text-center inline-block bg-yellow-700 text-white shadow hover:text-black px-8 py-4 font-semibold rounded-lg shadow hover:bg-gray-100">Enroll
                     Now</a>
             </div>
@@ -497,7 +504,7 @@
                             Recusandae consequuntur ipsam quae enim eos.</p>
                         <p class=text-white dark:text-gray-400">Check out
                             the <a
-                                href="https://flowbite.com/figma/"
+                                href="#"
                                 class="text-blue-600 dark:text-blue-500 hover:underline">
                                 Lorem ipsum dolor sit amet consectetur
                                 adipisicing elit. Odio, quas.
@@ -578,7 +585,7 @@
                         class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-center">
                         <span
                             class="text-sm text-white sm:text-center dark:text-gray-400">©
-                            2023 <a href="https://flowbite.com/"
+                            2023 <a href
                                 class="hover:underline">GM IT LIMITED</a>. All
                             Rights
                             Reserved.
@@ -607,7 +614,7 @@
 
             </div>
 
-            <div data-dial-init class="fixed end-6 bottom-6 group">
+            <!-- <div data-dial-init class="fixed end-6 bottom-6 group">
                 <div id="speed-dial-menu-square"
                     class="flex flex-col items-center hidden mb-4 space-y-2">
                     <button type="button"
@@ -656,7 +663,86 @@
                         class="w-12 h-12 object-cover" />
                     <span class="sr-only">Open actions menu</span>
                 </button>
+            </div> -->
+
+            <div data-dial-init class="fixed end-6 bottom-6 group">
+                <div id="speed-dial-menu-square"
+                    class="flex flex-col items-center hidden mb-4 space-y-2">
+                    <!-- Messenger button -->
+                    <button type="button"
+                        data-tooltip-target="tooltip-messenger"
+                        data-tooltip-placement="left"
+                        class="flex justify-center items-center w-[52px] h-[52px]">
+                        <img src="./Assets/messenger.png"
+                            class="w-12 h-12 object-cover" />
+                        <span class="sr-only">Messenger</span>
+                    </button>
+                    <!-- Tooltip for Messenger -->
+                    <div id="tooltip-messenger" role="tooltip"
+                        class="absolute z-10 invisible inline-block w-auto px-3 py-2 text-sm font-medium text-white transition-opacity duration-300 bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip dark:bg-gray-700">
+                        Messenger
+                        <div class="tooltip-arrow" data-popper-arrow></div>
+                    </div>
+
+                    <!-- WhatsApp button -->
+                    <button type="button" data-tooltip-target="tooltip-WhatsApp"
+                        data-tooltip-placement="left"
+                        class="flex justify-center items-center w-[52px] h-[52px]">
+                        <img src="./Assets/whatsapp.png"
+                            class="w-12 h-12 object-cover" />
+                        <span class="sr-only">WhatsApp</span>
+                    </button>
+                    <!-- Tooltip for WhatsApp -->
+                    <div id="tooltip-WhatsApp" role="tooltip"
+                        class="absolute z-10 invisible inline-block w-auto px-3 py-2 text-sm font-medium text-white transition-opacity duration-300 bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip dark:bg-gray-700">
+                        WhatsApp
+                        <div class="tooltip-arrow" data-popper-arrow></div>
+                    </div>
+
+                    <!-- Call button -->
+                    <button type="button" data-tooltip-target="tooltip-Call"
+                        data-tooltip-placement="left"
+                        class="flex justify-center items-center w-[52px] h-[52px]">
+                        <img src="./Assets/call.png"
+                            class="w-12 h-12 object-cover" />
+                        <span class="sr-only">Call</span>
+                    </button>
+                    <!-- Tooltip for Call -->
+                    <div id="tooltip-Call" role="tooltip"
+                        class="absolute z-10 invisible inline-block w-auto px-3 py-2 text-sm font-medium text-white transition-opacity duration-300 bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip dark:bg-gray-700">
+                        Call
+                        <div class="tooltip-arrow" data-popper-arrow></div>
+                    </div>
+                </div>
+
+                <!-- Button to toggle menu visibility -->
+                <button type="button" id="toggle-dial-menu"
+                    data-dial-toggle="speed-dial-menu-square"
+                    aria-controls="speed-dial-menu-square" aria-expanded="false"
+                    class="flex items-center justify-center text-white bg-white rounded w-12 h-12">
+                    <img src="./Assets/chat.png"
+                        class="w-12 h-12 object-cover" />
+                    <span class="sr-only">Open actions menu</span>
+                </button>
             </div>
 
+            <script>
+                // Get the button and menu
+const toggleButton = document.getElementById('toggle-dial-menu');
+const menu = document.getElementById('speed-dial-menu-square');
+
+// Add event listener to toggle menu visibility
+toggleButton.addEventListener('click', () => {
+    // Toggle the 'hidden' class on the menu
+    menu.classList.toggle('hidden');
+
+    // Get the current state of the menu (open or closed)
+    const isExpanded = menu.classList.contains('hidden');
+
+    // Update the aria-expanded attribute based on menu state
+    toggleButton.setAttribute('aria-expanded', !isExpanded);
+});
+
+            </script>
         </body>
     </html>
